@@ -1,3 +1,5 @@
+- Refactor: Prepare DebtAccountReportEntryBean to be used in reporting tool [#qubIT-Fenix-5422]
+
 11.11.0 (17-06-2024)
 - Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]
 
